Checkpoint: Adicionadas traduções em falta para a página de Nova Ocorrência Estrutural nos ficheiros pt.json e en.json. Chaves adicionadas: novaOcorrenciaEstrutural, reporteSituacoes, temaOcorrencia, comeceEscrever, temaPlaceholder, usado, novoTema, seraCriado, descricaoOcorrencia, descricaoPlaceholder, caracteres, minimo, sugestaoAcao, proponhaSolucao, sugestaoPlaceholder, classificacao, abrangenciaGeografica, nivelImpacto, situacaoMenor, requerAtencao, urgente, acaoImediata, lojasAfetadas, selecioneLojasEnvolvidas, nenhumaLojaDisponivel, evidencias, galeria, camara, foto, fotosAdicionadas, erroProcessarImagens, reportadaSucesso, erroTema, erroDescricaoMinima, erroZona, zonaAfetada, zonaPlaceholder, opcional, aGuardar.

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -159,6 +159,8 @@
     "ano": "Year",
     "voltarDashboard": "Back to Dashboard",
     "erroDesconhecido": "Unknown error",
+    "opcional": "Optional",
+    "aGuardar": "Saving...",
     "periodo": "Period",
     "selecioneMeses": "Select months",
     "filtrarPor": "Filter by",
@@ -887,7 +889,44 @@
     "nenhumaEncontrada": "No occurrences found",
     "nenhumaCorrespondeFiltros": "No occurrences match the selected filters.",
     "aindaNaoReportadas": "No structural occurrences have been reported yet.",
-    "reportarOcorrencia": "Report Occurrence"
+    "reportarOcorrencia": "Report Occurrence",
+    "novaOcorrenciaEstrutural": "New Structural Occurrence",
+    "reporteSituacoes": "Report situations that are not linked to a specific store",
+    "temaOcorrencia": "Occurrence Theme",
+    "comeceEscrever": "Start typing to see suggestions or create a new theme",
+    "temaPlaceholder": "E.g.: Supplier, Logistics, Training, Equipment...",
+    "usado": "used",
+    "novoTema": "New theme",
+    "seraCriado": "will be created",
+    "descricaoOcorrencia": "Occurrence Description",
+    "descricaoPlaceholder": "Describe in detail the structural situation you want to report...",
+    "caracteres": "characters",
+    "minimo": "minimum",
+    "sugestaoAcao": "Action Suggestion",
+    "proponhaSolucao": "Propose a solution or action to resolve this situation",
+    "sugestaoPlaceholder": "What do you suggest to resolve this situation?",
+    "classificacao": "Classification",
+    "abrangenciaGeografica": "Geographic Scope",
+    "nivelImpacto": "Impact Level",
+    "situacaoMenor": "Minor situation",
+    "requerAtencao": "Requires attention",
+    "urgente": "Urgent",
+    "acaoImediata": "Immediate action",
+    "lojasAfetadas": "Affected Stores",
+    "selecioneLojasEnvolvidas": "Select if there are specific stores involved",
+    "nenhumaLojaDisponivel": "No stores available",
+    "evidencias": "Evidence",
+    "galeria": "Gallery",
+    "camara": "Camera",
+    "foto": "Photo",
+    "fotosAdicionadas": "photo(s) added",
+    "erroProcessarImagens": "Error processing images",
+    "reportadaSucesso": "Structural occurrence reported successfully",
+    "erroTema": "Please indicate the occurrence theme/tag",
+    "erroDescricaoMinima": "Description must have at least 10 characters",
+    "erroZona": "Please indicate the affected zone",
+    "zonaAfetada": "Affected Zone",
+    "zonaPlaceholder": "E.g.: North, Center, Lisbon..."
   },
   "categorias": {
     "title": "Categories",
