--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -155,7 +155,9 @@
     "atrasado": "Atrasado",
     "filtros": "Filtros",
     "voltarDashboard": "Voltar ao Dashboard",
-    "erroDesconhecido": "Erro desconhecido"
+    "erroDesconhecido": "Erro desconhecido",
+    "opcional": "Opcional",
+    "aGuardar": "A guardar..."
   },
   "menu": {
     "groups": {
@@ -859,7 +861,44 @@
     "nenhumaEncontrada": "Nenhuma ocorrência encontrada",
     "nenhumaCorrespondeFiltros": "Nenhuma ocorrência corresponde aos filtros selecionados.",
     "aindaNaoReportadas": "Ainda não foram reportadas ocorrências estruturais.",
-    "reportarOcorrencia": "Reportar Ocorrência"
+    "reportarOcorrencia": "Reportar Ocorrência",
+    "novaOcorrenciaEstrutural": "Nova Ocorrência Estrutural",
+    "reporteSituacoes": "Reporte situações que não estão ligadas a uma loja específica",
+    "temaOcorrencia": "Tema da Ocorrência",
+    "comeceEscrever": "Comece a escrever para ver sugestões ou crie um novo tema",
+    "temaPlaceholder": "Ex: Fornecedor, Logística, Formação, Equipamento...",
+    "usado": "usado",
+    "novoTema": "Novo tema",
+    "seraCriado": "será criado",
+    "descricaoOcorrencia": "Descrição da Ocorrência",
+    "descricaoPlaceholder": "Descreva detalhadamente a situação estrutural que pretende reportar...",
+    "caracteres": "caracteres",
+    "minimo": "mínimo",
+    "sugestaoAcao": "Sugestão de Ação",
+    "proponhaSolucao": "Proponha uma solução ou ação para resolver esta situação",
+    "sugestaoPlaceholder": "O que sugere para resolver esta situação?",
+    "classificacao": "Classificação",
+    "abrangenciaGeografica": "Abrangência Geográfica",
+    "nivelImpacto": "Nível de Impacto",
+    "situacaoMenor": "Situação menor",
+    "requerAtencao": "Requer atenção",
+    "urgente": "Urgente",
+    "acaoImediata": "Ação imediata",
+    "lojasAfetadas": "Lojas Afetadas",
+    "selecioneLojasEnvolvidas": "Selecione se há lojas específicas envolvidas",
+    "nenhumaLojaDisponivel": "Nenhuma loja disponível",
+    "evidencias": "Evidências",
+    "galeria": "Galeria",
+    "camara": "Câmara",
+    "foto": "Foto",
+    "fotosAdicionadas": "foto(s) adicionada(s)",
+    "erroProcessarImagens": "Erro ao processar imagens",
+    "reportadaSucesso": "Ocorrência estrutural reportada com sucesso",
+    "erroTema": "Por favor, indique o tema/tag da ocorrência",
+    "erroDescricaoMinima": "A descrição deve ter pelo menos 10 caracteres",
+    "erroZona": "Por favor, indique a zona afetada",
+    "zonaAfetada": "Zona Afetada",
+    "zonaPlaceholder": "Ex: Norte, Centro, Lisboa..."
   },
   "categorias": {
     "title": "Categorias",
