Checkpoint: Corrigido bug do placeholder de tags em Reuniões de Lojas: adicionada a chave de tradução 'tagsPlaceholder' em ambos os ficheiros de tradução (pt.json e en.json) na secção 'reunioesLojas'. Agora o campo mostra corretamente 'Ex: Vendas, Operações...' em vez da chave de tradução.

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -758,7 +758,8 @@
     "criarGerirReunioes": "Create and manage operational meetings",
     "erroSelecionarLoja": "Please select at least one store",
     "erroPresencas": "Please indicate who attended the meeting",
-    "erroConteudo": "Please describe the meeting content"
+    "erroConteudo": "Please describe the meeting content",
+    "tagsPlaceholder": "E.g.: Sales, Operations..."
   },
   "resultados": {
     "title": "Results",
