Checkpoint: Bug v6.7: Corrigido labels 'common.mes' e 'common.ano' na página de Upload de Resultados. Adicionadas as chaves em falta no ficheiro de traduções pt.json para que os labels mostrem 'Mês' e 'Ano' em vez das chaves de tradução.

--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -157,7 +157,9 @@
     "voltarDashboard": "Voltar ao Dashboard",
     "erroDesconhecido": "Erro desconhecido",
     "opcional": "Opcional",
-    "aGuardar": "A guardar..."
+    "aGuardar": "A guardar...",
+    "mes": "Mês",
+    "ano": "Ano"
   },
   "menu": {
     "groups": {
