Checkpoint: Bug v6.11b corrigido: Adicionada chave de tradução 'resultados.dadosAtualizadosEm' aos ficheiros PT ('Dados atualizados em') e EN ('Data updated on'). Agora o texto aparece corretamente traduzido em vez da chave técnica.

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -1306,7 +1306,8 @@
     "selecioneFicheiroExcel": "Please select an Excel file (.xlsx or .xls)",
     "selecioneFicheiroMesAno": "Please select the file, month and year",
     "erroProcessarFicheiro": "Error processing file",
-    "erroUpload": "Error uploading"
+    "erroUpload": "Error uploading",
+    "dadosAtualizadosEm": "Data updated on"
   },
   "relatorioIA": {
     "titulo": "AI Results Report",
