Checkpoint: v6.34 - Corrigida tradução do menu 'Portal da Loja' que mostrava 'menu.items.portalLoja'. Adicionada chave de tradução em PT e EN.

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -213,6 +213,7 @@
       "topicosReuniao": "Meeting Topics",
       "reunioesLojas": "Store Meetings",
       "reunioesQuinzenais": "Bi-weekly Meetings",
+      "portalLoja": "Store Portal",
       "uploadResultados": "Upload Results",
       "dashboardResultados": "Results Dashboard",
       "relatorioIAResultados": "AI Results Report",
