--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -197,6 +197,7 @@
       "topicosReuniao": "Tópicos Reunião",
       "reunioesLojas": "Reuniões Lojas",
       "reunioesQuinzenais": "Reuniões Quinzenais",
+      "portalLoja": "Portal da Loja",
       "uploadResultados": "Upload Resultados",
       "dashboardResultados": "Dashboard Resultados",
       "relatorioIAResultados": "Relatório IA Resultados",
