Checkpoint: v6.6.1 - Projecao de Visitas movida para o menu lateral: A funcionalidade foi movida do Dashboard para uma pagina dedicada, acessivel atraves do menu lateral na seccao Tarefas, apos To-Do e Pendentes.

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -221,7 +221,8 @@
       "historicoLoja": "Store History",
       "relatorioBoard": "Board Report",
       "todo": "To-Do",
-      "pendentes": "Pending"
+      "pendentes": "Pending",
+      "projecaoVisitas": "Visit Projection"
     }
   },
   "dashboard": {
