--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -205,7 +205,8 @@
       "historicoLoja": "Histórico da Loja",
       "relatorioBoard": "Relatório Board",
       "todo": "To-Do",
-      "pendentes": "Pendentes"
+      "pendentes": "Pendentes",
+      "projecaoVisitas": "Projeção Visitas"
     }
   },
   "dashboard": {
