Checkpoint: Sistema de relacionamento entre lojas: página de gestão para criar/remover relações, seletor de loja no Portal da Loja para alternar entre lojas relacionadas com o mesmo token

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -222,7 +222,8 @@
       "relatorioBoard": "Board Report",
       "todo": "To-Do",
       "pendentes": "Pending",
-      "projecaoVisitas": "Visit Projection"
+      "projecaoVisitas": "Visit Projection",
+      "relacoesLojas": "Store Relations"
     }
   },
   "dashboard": {
