--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -206,7 +206,8 @@
       "relatorioBoard": "Relatório Board",
       "todo": "To-Do",
       "pendentes": "Pendentes",
-      "projecaoVisitas": "Projeção Visitas"
+      "projecaoVisitas": "Projeção Visitas",
+      "relacoesLojas": "Relações Lojas"
     }
   },
   "dashboard": {
