Checkpoint: v6.6.21 - Correção da tradução do menu Portal Gestor (mostrava a chave em vez do texto) e correção dos relatórios órfãos do gestor Fábio Dias (4 relatórios associados ao gestorId correto)

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -223,7 +223,8 @@
       "todo": "To-Do",
       "pendentes": "Pending",
       "projecaoVisitas": "Visit Projection",
-      "relacoesLojas": "Store Relations"
+      "relacoesLojas": "Store Relations",
+      "portalGestor": "Manager Portal"
     }
   },
   "dashboard": {
