--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -207,7 +207,8 @@
       "todo": "To-Do",
       "pendentes": "Pendentes",
       "projecaoVisitas": "Projeção Visitas",
-      "relacoesLojas": "Relações Lojas"
+      "relacoesLojas": "Relações Lojas",
+      "portalGestor": "Portal Gestor"
     }
   },
   "dashboard": {
