Checkpoint: v6.14.1 - Correção: Adicionada tradução em falta para o item 'Volantes' no menu do Dashboard (PT: Volantes, EN: Mobile Staff)

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -224,7 +224,8 @@
       "pendentes": "Pending",
       "projecaoVisitas": "Visit Projection",
       "relacoesLojas": "Store Relations",
-      "portalGestor": "Manager Portal"
+      "portalGestor": "Manager Portal",
+      "volantes": "Mobile Staff"
     }
   },
   "dashboard": {
