--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -208,7 +208,8 @@
       "pendentes": "Pendentes",
       "projecaoVisitas": "Projeção Visitas",
       "relacoesLojas": "Relações Lojas",
-      "portalGestor": "Portal Gestor"
+      "portalGestor": "Portal Gestor",
+      "volantes": "Volantes"
     }
   },
   "dashboard": {
