Checkpoint: Adicionada tradução para o menu "Análise Fichas" em português e inglês. O menu agora mostra corretamente "Análise Fichas" em vez de "menu.items.analiseFichas".

--- a/client/src/lib/translations/en.json
+++ b/client/src/lib/translations/en.json
@@ -225,7 +225,8 @@
       "projecaoVisitas": "Visit Projection",
       "relacoesLojas": "Store Relations",
       "portalGestor": "Manager Portal",
-      "volantes": "Mobile Staff"
+      "volantes": "Mobile Staff",
+      "analiseFichas": "Service Sheets Analysis"
     }
   },
   "dashboard": {
