--- a/client/src/lib/translations/pt.json
+++ b/client/src/lib/translations/pt.json
@@ -209,7 +209,8 @@
       "projecaoVisitas": "Projeção Visitas",
       "relacoesLojas": "Relações Lojas",
       "portalGestor": "Portal Gestor",
-      "volantes": "Volantes"
+      "volantes": "Volantes",
+      "analiseFichas": "Análise Fichas"
     }
   },
   "dashboard": {
